--- a/students.html
+++ b/students.html
@@ -103,13 +103,13 @@ Property-Based Testing</a></li>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2010-08-31:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">Automatically Verifying "M" Modeling Language Constraints</a></li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/">Spi2F# - A Prototype Code Generator for Security Protocols</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[First employment <a href="http://www.troxo.com/">Troxo</a>/<a href="http://www.atomia.com/">Atomia</a>] [Now PhD student at <a href="http://pub.ist.ac.at/~ttarrach/">IST Austria</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [First employment <a href="http://www.troxo.com/">Troxo</a>/<a href="http://www.atomia.com/">Atomia</a>] [Now PhD student at <a href="http://pub.ist.ac.at/~ttarrach/">IST Austria</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://people.mmci.uni-saarland.de/~mgrochul/">Martin Grochulla</a>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2009-01-06 (co-advised with Matteo Maffei)<br/><a href="students/grochulla/master.pdf">Security Despite System Compromise with Zero-Knowledge Proofs </a></li>
   </ul>
-  <div style="font-size: small; small margin-top: 0.5ex; margin-left: 3ex">[<a href="http://people.mmci.uni-saarland.de/~mgrochul/">Now PhD student at the MPI-INF</a>]</div></li>
+  <div style="font-size: small; small margin-top: 0.5ex; margin-left: 3ex">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>][<a href="http://people.mmci.uni-saarland.de/~mgrochul/">Now PhD student at the MPI-INF</a>]</div></li>
 </ul>
 
 
