--- a/students.html
+++ b/students.html
@@ -109,7 +109,7 @@ Property-Based Testing</a></li>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2009-01-06 (co-advised with Matteo Maffei)<br/><a href="students/grochulla/master.pdf">Security Despite System Compromise with Zero-Knowledge Proofs </a></li>
   </ul>
-  <div style="font-size: small; small margin-top: 0.5ex; margin-left: 3ex">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [<a href="http://people.mmci.uni-saarland.de/~mgrochul/">Now PhD student at the MPI-INF</a>]</div></li>
+  <div style="font-size: small; small margin-top: 0.5ex; margin-left: 3ex">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [<a href="http://people.mmci.uni-saarland.de/~mgrochul/">Then PhD student at the MPI-INF</a>] [Now at <a href="http://itinkubator.de/">IT Inkubator GmbH</a>]</div></li>
 </ul>
 
 
