--- a/students.html
+++ b/students.html
@@ -97,7 +97,7 @@ Property-Based Testing</a></li>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2011-04-04:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Mechanized Formalization of a Transformation from an Extensible Spi Calculus to Java</a></li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-28:<br/><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java - An Extensible Code Generator for Security Protocols</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[First employment <a href="http://www.de.capgemini.com">Capgemini</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [First employment <a href="http://www.de.capgemini.com">Capgemini</a>]</div></li>
   <li style="margin-bottom: 1ex;"><a href="http://pub.ist.ac.at/~ttarrach/">Thorsten Tarrach</a>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2010-08-31:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">Automatically Verifying "M" Modeling Language Constraints</a></li>
