--- a/students.html
+++ b/students.html
@@ -82,7 +82,7 @@ Property-Based Testing</a></li>
       <a href="publications/verified-testing-report.pdf">QuickChick: A Coq Framework For Verified Property-Based Testing</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7104/1/DT2014-0240.pdf">thesis</a>)
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://nickgian.github.io/">Nick Giannarakis</a>
   <ul>
@@ -90,7 +90,7 @@ Property-Based Testing</a></li>
       <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://de.linkedin.com/in/busenius">Alex Busenius</a>
   <ul>
