--- a/index.html
+++ b/index.html
@@ -537,34 +537,34 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="">Diane Gallois-Wong</a> (ENS Paris)
+  <li style="margin-bottom: 1ex;"><a href="">Diane Gallois-Wong</a>
   <ul>
     <li style="margin-top: 1ex;"><b>Upcoming:</b> Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/luck-diane.pdf">Luck: a Language for Effective, Dependable
 Property-Based Testing</a></li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Alejandro Aguirre</a> (Paris 7)
+  <li style="margin-bottom: 1ex;"><a href="">Alejandro Aguirre</a>
   <ul>
     <li style="margin-top: 1ex;"><b>Upcoming:</b> Research Internship at Inria, 2016-04 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-alejandro.pdf">F*: Reliable Automatic Proofs and Counterexamples using SMT</a></li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> (National University of Rosario)
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
   <ul>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a></li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://yannis.computer/">Yannis Juglaret</a>
   <ul>
     <li style="margin-top: 1ex;">PhD Student funded by DGA/Inria grant, 2015-10 to 2018-10:<br/> Micro-Policies: High-Assurance Hardware-Assisted Security Monitors
     </li>
     <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:
-      <a href="http://arxiv.org/abs/1510.00697">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
+      <a href="students/topics/2015/micro-policies-yannis.pdf">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
     </li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now PhD student at <a href="https://www.inria.fr/en/centre/paris">INRIA Paris</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
@@ -573,7 +573,7 @@ Property-Based Testing</a></li>
       <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
     </li>
   </ul>
-  <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="https://www.cis.upenn.edu/~aarthur/">University of Pennsylvania</a>]</div></li> -->
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="https://www.cis.upenn.edu/~aarthur/">University of Pennsylvania</a>]</div></li>
 
 </ul>
 
