--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ Property-Based Testing</a></li>
   <ul>
     <li style="margin-top: 1ex;">PhD Student funded by DGA/Inria grant, 2015-10 to 2018-10:<br/> Micro-Policies: High-Assurance Hardware-Assisted Security Monitors
     </li>
-    <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2015-03 to 2015-08:
       <a href="students/topics/2015/micro-policies-yannis.pdf">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
     </li>
   </ul>
