--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ Property-Based Testing</a></li>
     <li style="margin-top: 1ex;">PhD Student funded by DGA/Inria grant, 2015-10 to 2018-10:<br/> Micro-Policies: High-Assurance Hardware-Assisted Security Monitors
     </li>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2015-03 to 2015-08:
-      <a href="students/topics/2015/micro-policies-yannis.pdf">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
+      <a href="http://arxiv.org/abs/1510.00697">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now PhD student at <a href="https://www.inria.fr/en/centre/paris">INRIA Paris</a>]</div></li>
