--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ Research Cambridge</a>.</p>
     (PC member)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations Symposium, CSF 2016</a> (PC member)
-  <ul>
-  <li>Submission deadline: February 12, 2016</li>
-  </ul>
+  <!-- <ul> -->
+  <!-- <li>Submission deadline: February 12, 2016</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
