--- a/index.html
+++ b/index.html
@@ -422,6 +422,15 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b>Recent:</b> Efficient Formally Secure Compilers
+to a Tagged Architecture</a> 
+
+    <ul style="font-size: small">
+      <li>Prosecco Seminar (2016-03-02)</li>
+      <li>MPI-SWS (2016-02-22)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b>Recent:</b> More Secure Software Systems by
     Formal Verification,<br/>Property-Based Testing, Secure
     Compilation, and Dynamic Monitoring</a> 
