--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@ to a Tagged Architecture</a>
 
   <li style="margin-bottom: 1ex"><b>Recent:</b> <a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a> (2015-09-03): <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a></li>
 
+<!-- TODO: remove this -->
   <li style="margin-bottom: 1ex;"><em>Secure Compilation Using Micro-Policies</em>
     <ul style="font-size: small">
 
