--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@ Research Cambridge</a>.</p>
   <!-- </ul> -->
    </li>
 
+  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2017/post">Principles of Security and Trust,
+      POST 2017</a> (PC member)
+  <!-- <ul> -->
+  <!-- <li>Submission deadline: , 2016</li> -->
+  <!-- </ul> -->
+  </li>
+
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
     Theorem Proving, ITP 2016</a> (PC member)
   <ul>
