--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017">
     Symposium on Principles of Programming Languages, POPL 2017</a>
-    (PC member)</li>
+    (PC member)
+  <ul>
+  <li>Abstract deadline: 1 Jul, 2016</li>
+  <li>Submission deadline: 6 Jul, 2016</li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2017/post">Principles of Security and Trust,
       POST 2017</a> (PC member)
