--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Research Cambridge</a>.</p>
   <ul>
   <li>Abstract deadline: 1 Jul, 2016</li>
   <li>Submission deadline: 6 Jul, 2016</li>
+  <li>Conference: Wed 18 - Fri 20 January 2017 Paris, France</li>
   </ul>
   </li>
 
@@ -71,10 +72,11 @@ Research Cambridge</a>.</p>
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations Symposium, CSF 2016</a> (PC member)
-  <!-- <ul> -->
+  <ul>
   <!-- <li>Submission deadline: February 12, 2016</li> -->
-  <!-- </ul> -->
-   </li>
+  <li>Conference: June 27-July 1, 2016, Lisboa, Portugal</li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
     Theorem Proving, ITP 2016</a> (PC member)
@@ -91,7 +93,14 @@ Research Cambridge</a>.</p>
   <!-- <\!-- <li>Submission deadline: October 14, 2015</li> -\-> -->
   <!-- </ul> -->
   </li>
-  <li style="margin-bottom: 1ex;"><a href="http://hatt2016.inria.fr/">Hammers for Type Theories, HaTT 2016</a> (PC member)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://hatt2016.inria.fr/">Hammers for Type Theories, HaTT 2016</a> (PC member)
+  <ul>
+  <li>Abstract deadline: 4 April, 2016</li>
+  <li>Submission deadline: 11 April, 2016</li>
+  </ul>
+  </li>
+
+
   <li style="margin-bottom: 1ex;"><a href="">Workshop on Type-Directed Programming 2016</a> (PC member)</li>
   <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, 4 January 2016
   </li>
