--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ Research Cambridge</a>.</p>
     Theorem Proving, ITP 2016</a> (PC member)
   <ul>
   <li>Submission deadline: 7 March, 2016</li>
+  <li>Conference: 22 to 27 August 2016, Nancy, France</li>
   </ul>
   </li>
 
