--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Research Cambridge</a>.</p>
   <ul>
   <li>Abstract deadline: 1 Jul, 2016</li>
   <li>Submission deadline: 6 Jul, 2016</li>
-  <li>Conference: Wed 18 - Fri 20 January 2017 Paris, France</li>
+  <li>Conference: 18-20 January 2017, Paris, France</li>
   </ul>
   </li>
 
@@ -75,15 +75,15 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations Symposium, CSF 2016</a> (PC member)
   <ul>
   <!-- <li>Submission deadline: February 12, 2016</li> -->
-  <li>Conference: June 27-July 1, 2016, Lisboa, Portugal</li>
+  <li>Conference: 27 June - 1 July 2016, Lisboa, Portugal</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
     Theorem Proving, ITP 2016</a> (PC member)
   <ul>
-  <li>Submission deadline: 7 March, 2016</li>
-  <li>Conference: 22 to 27 August 2016, Nancy, France</li>
+  <li>Submission deadline: 7 March 2016</li>
+  <li>Conference: 22-27 August 2016, Nancy, France</li>
   </ul>
   </li>
 
@@ -99,6 +99,7 @@ Research Cambridge</a>.</p>
   <ul>
   <li>Abstract deadline: 4 April, 2016</li>
   <li>Submission deadline: 11 April, 2016</li>
+  <li>Conference: 1 July 2016, Coimbra, Portugal</li>
   </ul>
   </li>
 
