--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ Research Cambridge</a>.</p>
     Symposium on Principles of Programming Languages, POPL 2017</a>
     (PC member)
   <ul>
-  <li>Abstract deadline: 1 Jul, 2016</li>
-  <li>Submission deadline: 6 Jul, 2016</li>
+  <li>Abstract deadline: 1 July 2016</li>
+  <li>Submission deadline: 6 July 2016</li>
   <li>Conference: 18-20 January 2017, Paris, France</li>
   </ul>
   </li>
