--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ Research Cambridge</a>.</p>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://hatt2016.inria.fr/">Hammers for Type Theories, HaTT 2016</a> (PC member)
   <ul>
-  <li>Abstract deadline: 4 April, 2016</li>
-  <li>Submission deadline: 11 April, 2016</li>
+  <li>Abstract deadline: 4 April 2016</li>
+  <li>Submission deadline: 11 April 2016</li>
   <li>Conference: 1 July 2016, Coimbra, Portugal</li>
   </ul>
   </li>
