--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/icfp-2016/tyde-2016-papers">Workshop on Type-Directed Programming, TyDe 2016</a> (PC member)
   <ul>
-  <li>Workshop: Sun 18 - Sat 24 September 2016, Nara, Japan</li>
+  <li>Workshop: 18-24 September 2016, Nara, Japan</li>
   </ul>
   </li>
   <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, 4 January 2016
