--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for students and young researchers</a></li>
 
-  <li>Inria Award for PhD Supervising and for Research (PEDR)</li>
+  <li style="margin-bottom: 1ex;">>Inria Award for PhD Supervising and for Research (PEDR)</li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
