--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@ could contribute:
 <!--(but there are many other possible ones):--></p>
 <ul>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/secomp.pdf">Efficient Formally Secure Compilers to a Tagged Architecture</a><br/>
-  (<a href="http://arxiv.org/abs/1510.00697">draft paper #1</a>,
+  (<a href="http://arxiv.org/abs/1602.04503">draft paper #0</a>,
+   <a href="http://arxiv.org/abs/1510.00697">draft paper #1</a>,
    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">paper #2</a>,
    <a href="http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html">paper #3</a>,
    <a href="https://github.com/micro-policies">code</a>)</li>
