--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for students and young researchers</a></li>
 
-  <li style="margin-bottom: 1ex;">Won Inria Award for PhD Supervising and for Research (PEDR), March 2016</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325\&categorieLien=id">Got Inria Award for PhD Supervising and for Research (PEDR)</a>, March 2016</li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
