--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325\&categorieLien=id">Got Inria Award for PhD Supervising and for Research (PEDR)</a>, March 2016</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Got Inria Award for PhD Supervising and for Research (PEDR)</a>, March 2016</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for students and young researchers</a></li>
 
