--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Research Cambridge</a>.</p>
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017">
-    Symposium on Principles of Programming Languages, POPL 2017</a>
+    Principles of Programming Languages, POPL 2017</a>
     (PC member)
   <ul>
   <li>Abstract deadline: 1 July 2016</li>
