--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations Symposium, CSF 2016</a> (PC member)
+  <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations, CSF 2016</a> (PC member)
   <ul>
   <!-- <li>Submission deadline: February 12, 2016</li> -->
   <li>Conference: 27 June - 1 July 2016, Lisboa, Portugal</li>
