--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Research Cambridge</a>.</p>
   </li>
 
 
-  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/icfp-2016/tyde-2016-papers">Workshop on Type-Directed Programming, TyDe 2016</a> (PC member)
+  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/icfp-2016/tyde-2016-papers">Type-Directed Programming, TyDe 2016</a> (PC member)
   <ul>
   <li>Workshop: 18-24 September 2016, Nara, Japan</li>
   </ul>
