--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Research Cambridge</a>.</p>
   <li>Workshop: 18-24 September 2016, Nara, Japan</li>
   </ul>
   </li>
-  <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, 4 January 2016
+  <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, January 2016
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
