--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Received Inria award for PhD Supervising and for Research (PEDR)</a>, March 2016</li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for students and young researchers</a></li>
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for PostDocs and young researchers</a></li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
@@ -111,6 +109,9 @@ Research Cambridge</a>.</p>
   <li>Workshop: 18-24 September 2016, Nara, Japan</li>
   </ul>
   </li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Received Inria award for PhD Supervising and for Research (PEDR)</a>, March 2016</li>
+
   <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, January 2016
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
@@ -467,7 +468,7 @@ to a Tagged Architecture</a>
 
     <ul style="font-size: small">
       <li>Invited vision talk at scientific committee meeting of
-          Alcatel-Lucent's Bell Labs<br/>-- Inria common lab:
+          Nokia's Bell Labs<br/>-- Inria common lab:
           <a href="talks/Alcatel-Lucent.pdf">slides</a>
           (2015-12-15)</li>
     </ul>
