--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ Research Cambridge</a>.</p>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://2015.ecoop.org/event/plas-2015-papers-micro-policies-formally-verified-tag-based-security-monitors">Invited talk on Micro-Policies</a> at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>, 6 July 2015
   </li>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Lecture</a>, Saarland University, 16-27 March 2015
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Lecture</a>, Saarland University, 16-27 March 2015 -->
+  <!-- </li> -->
 <!--
   <li style="margin-bottom: 1ex;">
   <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>,
