--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ Property-Based Testing</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Alejandro Aguirre</a>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/alejandroag">Alejandro Aguirre</a>
   <ul>
     <li style="margin-top: 1ex;"><b>Upcoming:</b> Research Internship at Inria, 2016-04 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-alejandro.pdf">F*: Reliable Automatic Proofs and Counterexamples using SMT</a></li>
   </ul>
