--- a/index.html
+++ b/index.html
@@ -256,12 +256,12 @@ MPRI website</a>.</p>
   <ul style="width:42em; text-align: left">
     <li style="margin-bottom: 1ex;">
       <em>formal methods for computer and network security</em>:
-      security protocols,
-      privacy,
-      anonymity,
-      information flow control,
-      access control,
-      integrity</li>
+      memory safety,
+      compartmentalization,
+      dynamic monitoring,
+      integrity,
+      information flow,
+      security protocols</li>
     <li style="margin-bottom: 1ex;">
       <em>programming-languages techniques</em>:
       type systems,
@@ -270,13 +270,13 @@ MPRI website</a>.</p>
       property-based testing,
       semantics,
       formal metatheory,
-      formally certified tools,
-      dynamic enforcement</li>
+      certified tools</li>
     <li style="margin-bottom: 1ex;">
       <em>design and verification of security-critical systems</em>:
       reference monitors,
-      compilers,
-      microkernels</li>
+      secure compilers,
+      microkernels,
+      secure hardware</li>
   </ul>
 
 <h2>Recent Publications and Drafts</h2>
