--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-
-  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/icfp-2016/tyde-2016-papers">Type-Directed Programming, TyDe 2016</a> (PC member)
+<!-- http://conf.researchr.org/track/icfp-2016/tyde-2016-papers -->
+  <li style="margin-bottom: 1ex;"><a href="https://tyde2016.github.io">Type-Directed Programming, TyDe 2016</a> (PC member)
   <ul>
   <li>Workshop: 18-24 September 2016, Nara, Japan</li>
   </ul>
