--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Research Cambridge</a>.</p>
   </li>
 
 <!-- http://conf.researchr.org/track/icfp-2016/tyde-2016-papers -->
-  <li style="margin-bottom: 1ex;"><a href="https://tyde2016.github.io">Type-Directed Programming, TyDe 2016</a> (PC member)
+  <li style="margin-bottom: 1ex;"><a href="https://tyde2016.github.io">Type-Driven Programming, TyDe 2016</a> (PC member)
   <ul>
   <li>Workshop: 18-24 September 2016, Nara, Japan</li>
   </ul>
