--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@ Research Cambridge</a>.</p>
 <!-- http://conf.researchr.org/track/icfp-2016/tyde-2016-papers -->
   <li style="margin-bottom: 1ex;"><a href="https://tyde2016.github.io">Type-Driven Programming, TyDe 2016</a> (PC member)
   <ul>
+  <li>Regular paper deadline: 10 June 2016</li>
+  <li>Extended abstract deadline: 24 June 2016</li>
   <li>Workshop: 18-24 September 2016, Nara, Japan</li>
   </ul>
   </li>
