--- a/index.html
+++ b/index.html
@@ -294,10 +294,13 @@ MPRI website</a>.</p>
             Arthur Azevedo de Amorim, and
             Benjamin C. Pierce.<br/>
     <b><a href="http://arxiv.org/abs/1602.04503">
-          Beyond Full Abstraction: Formalizing the Security Guarantees
+          Beyond Good and Evil: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
     Draft, arXiv:1602.04503, February 2016.
   </li>
+  <ul style="font-size: small">
+    A draft version of the paper was entitled Beyond Full Abstraction</li>
+  </ul>
 
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
