--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ MPRI website</a>.</p>
     Draft, arXiv:1602.04503, February 2016.
   </li>
   <ul style="font-size: small">
-    A draft version of the paper was entitled Beyond Full Abstraction</li>
+    <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
   </ul>
 
   <li style="margin-bottom: 1ex;">
