--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@ Research Cambridge</a>.</p>
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017">
+    European Symposium on Security and Privacy, Euro S&amp;P 2017</a>
+    (Main Organizer)
+  <ul>
+  <!-- <li>Abstract deadline: 1 July 2016</li> -->
+  <!-- <li>Submission deadline: 6 July 2016</li> -->
+  <li>Conference: March-April 2017, Paris, France</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017">
     Principles of Programming Languages, POPL 2017</a>
     (PC member)
   <ul>
