--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Research Cambridge</a>.</p>
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2016/">
-    European Symposium on Security and Privacy, Euro S&amp;P 2017</a>
+    European Symposium on Security and Privacy, 2017</a>
     (Organization Chair)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2016</li> -->
