--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
     Theorem Proving, ITP 2016</a> (PC member)
   <ul>
-  <li>Submission deadline: 7 March 2016</li>
+  <!-- <li>Submission deadline: 7 March 2016</li> -->
   <li>Conference: 22-27 August 2016, Nancy, France</li>
   </ul>
   </li>
