--- a/publications.html
+++ b/publications.html
@@ -314,9 +314,12 @@
             Arthur Azevedo de Amorim, and
             Benjamin C. Pierce.<br/>
     <b><a href="http://arxiv.org/abs/1602.04503">
-          Beyond Full Abstraction: Formalizing the Security Guarantees
+          Beyond Good and Evil: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
-    Draft, arXiv:1602.04503, February 2016.
+    Draft, arXiv:1602.04503, March 2016.
+  <ul style="font-size: small">
+    <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
+  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
