--- a/index.html
+++ b/index.html
@@ -468,6 +468,18 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
+    
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar 16131
+          Language Based Verification Tools for Functional Programs</a> (2016-03-30):
+      </li>
+
+      <li><a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a> (2015-09-03): <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a>
+      </li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b>Recent:</b> Efficient Formally Secure Compilers
 to a Tagged Architecture</a> 
 
@@ -505,8 +517,6 @@ to a Tagged Architecture</a>
 
     </ul>
   </li>
-
-  <li style="margin-bottom: 1ex"><b>Recent:</b> <a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a> (2015-09-03): <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a></li>
 
   <li style="margin-bottom: 1ex;"><em>Micro-Policies: Formally Verified, Tag-Based Security Monitors</em>
     <ul style="font-size: small">
