--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
     
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar 16131
+      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar on
           Language Based Verification Tools for Functional Programs</a> (2016-03-30):
       </li>
 
