--- a/index.html
+++ b/index.html
@@ -472,10 +472,11 @@ MPRI website</a>.</p>
     
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar on
-          Language Based Verification Tools for Functional Programs</a> (2016-03-30):
+          Language Based Verification Tools for Functional Programs</a>:<br/>
+          (2016-03-30)
       </li>
 
-      <li><a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a> (2015-09-03): <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a>
+      <li><a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
       </li>
     </ul>
   </li>
