--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ MPRI website</a>.</p>
     
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar on
-          Language Based Verification Tools for Functional Programs</a>:<br/>
+          Language Based Verification Tools<br/> for Functional Programs</a>:
           <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a> (2016-03-30)
       </li>
 
