--- a/index.html
+++ b/index.html
@@ -471,8 +471,8 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
     
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar on
-          Language Based Verification Tools<br/> for Functional Programs</a>:
+      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar on<br/>
+          Language Based Verification Tools for Functional Programs</a>:
           <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a> (2016-03-30)
       </li>
 
