--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ MPRI website</a>.</p>
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar on<br/>
           Language Based Verification Tools for Functional Programs</a>:
-          <a href="talks/fstar-dagstuhl.html">slides</a> (2016-03-30)
+          <a href="talks/fstar-dagstuhl.html?transition=none&history=1">slides</a> (2016-03-30)
       </li>
 
       <li><a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
