--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ MPRI website</a>.</p>
           <a href="talks/fstar-dagstuhl.html?transition=none&history=1">slides</a> (2016-03-30)
       </li>
 
-      <li><a href="http://www.mlworkshop.org/full-dependency-and-user-defined-effects-in-fstar.pdf">Full dependency and user-defined effects in F*</a><br/> at <a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
+      <li><a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
       </li>
     </ul>
   </li>
