--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2016/">
     European Symposium on Security and Privacy, Euro S&amp;P 2017</a>
-    (Organizer)
+    (General Chair)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2016</li> -->
   <!-- <li>Submission deadline: 6 July 2016</li> -->
