--- a/index.html
+++ b/index.html
@@ -303,9 +303,11 @@ MPRI website</a>.</p>
             Arthur Azevedo de Amorim, and
             Benjamin C. Pierce.<br/>
     <b><a href="http://arxiv.org/abs/1602.04503">
+
           Beyond Good and Evil: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
-    Draft, arXiv:1602.04503, March 2016.
+          In 29th IEEE Symposium on Computer Security Foundations (CSF).
+          To appear, arXiv:1602.04503. Draft of April 2016.
   <ul style="font-size: small">
     <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
   </ul>
