--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ MPRI website</a>.</p>
           Beyond Good and Evil: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
           In 29th IEEE Symposium on Computer Security Foundations (CSF).
-          To appear, arXiv:1602.04503. Draft of March 2016.
+          To appear. arXiv:1602.04503. Draft of March 2016.
   <ul style="font-size: small">
     <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
   </ul>
