--- a/students.html
+++ b/students.html
@@ -98,10 +98,10 @@ Property-Based Testing</a></li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-28:<br/><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java - An Extensible Code Generator for Security Protocols</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [First employment <a href="http://www.de.capgemini.com">Capgemini</a>] [Now at <a href="http://www.luxoft.com/">Luxoft</a>]</div></li>
-  <li style="margin-bottom: 1ex;"><a href="http://pub.ist.ac.at/~ttarrach/">Thorsten Tarrach</a>
+  <li style="margin-bottom: 1ex;"><a href="https://thorstent.github.io/">Thorsten Tarrach</a>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2010-08-31:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">Automatically Verifying "M" Modeling Language Constraints</a></li>
-    <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/">Spi2F# - A Prototype Code Generator for Security Protocols</a></li>
+    <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <!-- <a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/"> -->Spi2F# - A Prototype Code Generator for Security Protocols<!-- </a> --></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [First employment <a href="http://www.troxo.com/">Troxo</a>/<a href="http://www.atomia.com/">Atomia</a>] [Now PhD student at <a href="http://pub.ist.ac.at/~ttarrach/">IST Austria</a>]</div></li>
 
