--- a/students.html
+++ b/students.html
@@ -53,7 +53,7 @@ Property-Based Testing</a></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
-    <li style="margin-top: 1ex;"> PhD student at University of Pennsylvania since 2011, external co-supervisor</li>
+    <li style="margin-top: 1ex;">PhD student at University of Pennsylvania since 2011, external co-supervisor</li>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
       <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
     </li>
@@ -62,7 +62,7 @@ Property-Based Testing</a></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/xia/">Li-yao Xia</a>
   <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2015-04 to 2015-08:
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2015-04 to 2015-08:
       <a href="students/topics/2015/quick-chick.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
     </li>
   </ul>
@@ -70,7 +70,7 @@ Property-Based Testing</a></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
   <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2015-03 to 2015-08:
       <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
     </li>
   </ul>
@@ -78,7 +78,7 @@ Property-Based Testing</a></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a>
   <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2014-04 to 2014-09:<br/>
       <a href="publications/verified-testing-report.pdf">QuickChick: A Coq Framework For Verified Property-Based Testing</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7104/1/DT2014-0240.pdf">thesis</a>)
     </li>
   </ul>
@@ -86,7 +86,7 @@ Property-Based Testing</a></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://nickgian.github.io/">Nick Giannarakis</a>
   <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2014-04 to 2014-09:<br/>
       <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
     </li>
   </ul>
