--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,10 @@
     Maxime Dénès,
     John Hughes,
     Benjamin C. Pierce, and
-    Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Accepted in Special Issue of Journal of Functional Programming for ICFP 2013. To appear. Revision of July 2015.
+    Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing
+    Noninterference, Quickly</a></b>. Special Issue of Journal of
+    Functional Programming for ICFP 2013. 26:e4 (62 pages), April 2016.
+    Technical Report available as <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>.
   </li>
 
   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <b><a href="publications/rcf-and-or-coq-jcs2014.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations</a></b>, <a href="http://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security (JCS)</a>; <a href="http://iospress.metapress.com/content/k28485h0t643/?p=f499e1ab872f49ddb4350156a27584e9&amp;pi=0"> Special Issue on Foundational Aspects of Security</a>, 22(2):301-353, February, 2014.
