--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ MPRI website</a>.</p>
     Benjamin C. Pierce, and
     Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing
     Noninterference, Quickly</a></b>. Special Issue of Journal of
-    Functional Programming for ICFP 2013. 26:e4 (62 pages), April 2016.
+    Functional Programming (JFP) for ICFP 2013. 26:e4 (62 pages), April 2016.
     Technical Report available as <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>.
   </li>
 
