--- a/index.html
+++ b/index.html
@@ -300,14 +300,15 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
             C&#259;t&#259;lin Hri&#355;cu,
-            Arthur Azevedo de Amorim, and
+            Arthur Azevedo de Amorim,
+            Boris Eng, and
             Benjamin C. Pierce.<br/>
     <b><a href="http://arxiv.org/abs/1602.04503">
 
           Beyond Good and Evil: Formalizing the Security Guarantees
-                                   of Low-Level Compartmentalization</a></b>.
+                                of Compartmentalizing Compilation</a></b>.
           In 29th IEEE Symposium on Computer Security Foundations (CSF).
-          To appear. arXiv:1602.04503. Draft of March 2016.
+          To appear. arXiv:1602.04503. Author Preprint of May 6 2016.
   <ul style="font-size: small">
     <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
   </ul>
