--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ MPRI website</a>.</p>
             C&#259;t&#259;lin Hri&#355;cu,
             Arthur Azevedo de Amorim,
             Boris Eng, and
-            Benjamin C. Pierce.<br/>
+            Benjamin C. Pierce.
     <b><a href="http://arxiv.org/abs/1602.04503">
 
           Beyond Good and Evil: Formalizing the Security Guarantees
