--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ MPRI website</a>.</p>
 
           Beyond Good and Evil: Formalizing the Security Guarantees
                                 of Compartmentalizing Compilation</a></b>.
-          In 29th IEEE Symposium on Computer Security Foundations (CSF).
+          <a href="http://csf2016.tecnico.ulisboa.pt/">In 29th IEEE Symposium on Computer Security Foundations (CSF)</a>.
           To appear. arXiv:1602.04503. Author Preprint of May 6 2016.
   <ul style="font-size: small">
     <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
