--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ MPRI website</a>.</p>
     Jean-Karim Zinzindohoue,
     Santiago Zanella-B&eacute;guelin.
     <b><a href="https://www.fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
-    In 43rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL), pages 256-270, January 2016.
+    <a href="http://conf.researchr.org/home/POPL-2016">In 43rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL)</a>, pages 256-270, January 2016.
   <ul style="font-size: small">
     <!-- <li>A draft of the paper was entitled <a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li> -->
   </ul>
