--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ to a Tagged Architecture</a>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a></b>, <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, December 2016 - January 2017
+  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=cours:c-2-30">Cryptographic protocols: formal and computational proofs</a></b>, <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, December 2016 - January 2017
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.cis.upenn.edu/~bcpierce/courses/670Fall12/">Advanced Martial Arts in Coq</a></b>
