--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@ Research Cambridge</a>.</p>
     European Symposium on Security and Privacy, Euro S&amp;P 2017</a>
     (General Chair)
   <ul>
-  <!-- <li>Abstract deadline: 1 July 2016</li> -->
-  <!-- <li>Submission deadline: 6 July 2016</li> -->
-  <li>Conference: March-April 2017, Paris, France</li>
+  <!-- <li>Submission deadline: August 2016</li> -->
+  <li>Conference: 26-28 April 2017, Paris, France</li>
   </ul>
   </li>
 
