--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>.</p>
 <p style="width:42em; text-align: left">
 Between May 2011 and September 2013 I was Research Associate at
 the <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>,
-working on the <a href="http://www.crash-safe.org/">CRASH/SAFE
-project</a> under the supervision
+working <!--on the <a href="http://www.crash-safe.org/">CRASH/SAFE
+project</a>--> under the supervision
 of <a href="http://www.cis.upenn.edu/~bcpierce/"><!--Prof. -->Benjamin
 C. Pierce</a>. I was a member of
 the <a href="http://www.cis.upenn.edu/~plclub/">Penn PL Club</a>.</p>
