--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@ the <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>,
 working <!--on the <a href="http://www.crash-safe.org/">CRASH/SAFE
 project</a>--> under the supervision
 of <a href="http://www.cis.upenn.edu/~bcpierce/"><!--Prof. -->Benjamin
-C. Pierce</a>. I was a member of
-the <a href="http://www.cis.upenn.edu/~plclub/">Penn PL Club</a>.</p>
+C. Pierce</a>.
+<!--I was a member of
+the <a href="http://www.cis.upenn.edu/~plclub/">Penn PL Club</a>.--></p>
 
 <p style="width:42em; text-align: left"> I received my PhD
 <!--(summa cum laude)-->
