--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ the <a href="http://www.cis.upenn.edu/~plclub/">Penn PL Club</a>.--></p>
 <p style="width:42em; text-align: left"> I received my PhD
 <!--(summa cum laude)-->
 from <a href="http://www.cs.uni-saarland.de/index.php?lang=en">Saarland
-University</a>.  While in Saarbrücken, I 
+University</a>, Saarbrücken, Germany, where I 
 <!-- was a member of
 the <a href="http://www.infsec.cs.uni-saarland.de/">Information
 Security and Cryptography Group</a> and
