--- a/talks.html
+++ b/talks.html
@@ -24,14 +24,35 @@
 
 <ul style="width:42em; text-align: left">
 
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar 16131 on<br/>
+          Language Based Verification Tools for Functional Programs</a>:
+          <a href="talks/fstar-dagstuhl.html?transition=none&history=1">slides</a> (2016-03-30)
+      </li>
+
+      <li><a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
+      </li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b>Recent:</b> Efficient Formally Secure Compilers
+to a Tagged Architecture</a> 
+
+    <ul style="font-size: small">
+      <li>ERC interview (2016-05-31)</li>
+      <li>Prosecco Seminar (2016-03-02)</li>
+      <li>MPI-SWS (2016-02-22)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b>Recent:</b> More Secure Software Systems by
     Formal Verification,<br/>Property-Based Testing, Secure
     Compilation, and Dynamic Monitoring</a> 
 
     <ul style="font-size: small">
       <li>Invited vision talk at scientific committee meeting of
-          Alcatel- Lucent's Bell Labs<br/>-- Inria common lab
-          (2015): <a href="talks/Alcatel-Lucent.pdf">slides</a>
+          Nokia's Bell Labs<br/>-- Inria common lab:
+          <a href="talks/Alcatel-Lucent.pdf">slides</a>
           (2015-12-15)</li>
     </ul>
   </li>
