--- a/index.html
+++ b/index.html
@@ -296,6 +296,14 @@ MPRI website</a>.</p>
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">
+     Alejandro Aguirre,
+     C&#259;t&#259;lin Hri&#355;cu,
+     Chantal Keller,
+     and Nikhil Swamy.
+  <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a>.
+  Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
+  </li>
 
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
