--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ MPRI website</a>.</p>
      C&#259;t&#259;lin Hri&#355;cu,
      Chantal Keller,
      and Nikhil Swamy.
-  <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT<br/> (extended abstract)</a></b>.
+  <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>.
   Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
   </li>
 
