--- a/publications.html
+++ b/publications.html
@@ -232,6 +232,15 @@
 <ol start="21" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+     Alejandro Aguirre,
+     C&#259;t&#259;lin Hri&#355;cu,
+     Chantal Keller,
+     and Nikhil Swamy.
+  <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>.
+  Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
       Udit Dhawan,
       Albert Kwon,
       Edin Kadric,
@@ -272,7 +281,7 @@
 </ol>
 
 <h3>Theses</h3>
-<ol start="27" style="width:42em; text-align: left">
+<ol start="28" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://scidok.sulb.uni-saarland.de/volltexte/2012/4800/pdf/catalin_phd_2012_03_24_final.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Security Protocol Analysis</a>. PhD Thesis, <!--Advisors: Michael Backes, Matteo Maffei, and Andrew D. Gordon (MSR)--> Saarland University, <!--Saarbr&uuml;cken. Submitted: 14 November 2011. Defended: 10 January 2012. Published: 29 March 2012--> January 2012.
   <ul style="font-size: small">
     <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">the F5 Toolchain for RCF</a>.</li>
@@ -309,7 +318,7 @@
 <!--
 -->
 <h3>Drafts</h3>
-<ol start="29" style="width:42em; text-align: left">
+<ol start="30" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
