--- a/publications.html
+++ b/publications.html
@@ -88,6 +88,23 @@
 <ol start="7" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Yannis Juglaret,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Arthur Azevedo de Amorim,
+            Boris Eng, and
+            Benjamin C. Pierce.
+    <b><a href="http://arxiv.org/abs/1602.04503">
+
+          Beyond Good and Evil: Formalizing the Security Guarantees
+                                of Compartmentalizing Compilation</a></b>.
+          <a href="http://csf2016.tecnico.ulisboa.pt/">In 29th IEEE Symposium on Computer Security Foundations (CSF)</a>.
+          To appear. arXiv:1602.04503. Author Preprint of May 6 2016.
+  <ul style="font-size: small">
+    <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     <a href="http://research.microsoft.com/en-us/people/nswamy/">Nikhil Swamy</a>,
     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">C&#259;t&#259;lin Hri&#355;cu</a>,
     <a href="http://prosecco.gforge.inria.fr/personal/ckeller/">Chantal Keller</a>,
@@ -229,7 +246,7 @@
 </ol>
 
 <h3>Refereed Workshop Papers</h3>
-<ol start="21" style="width:42em; text-align: left">
+<ol start="22" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
      Alejandro Aguirre,
@@ -281,7 +298,7 @@
 </ol>
 
 <h3>Theses</h3>
-<ol start="28" style="width:42em; text-align: left">
+<ol start="29" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://scidok.sulb.uni-saarland.de/volltexte/2012/4800/pdf/catalin_phd_2012_03_24_final.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Security Protocol Analysis</a>. PhD Thesis, <!--Advisors: Michael Backes, Matteo Maffei, and Andrew D. Gordon (MSR)--> Saarland University, <!--Saarbr&uuml;cken. Submitted: 14 November 2011. Defended: 10 January 2012. Published: 29 March 2012--> January 2012.
   <ul style="font-size: small">
     <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">the F5 Toolchain for RCF</a>.</li>
@@ -319,20 +336,6 @@
 -->
 <h3>Drafts</h3>
 <ol start="30" style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;">
-            Yannis Juglaret,
-            C&#259;t&#259;lin Hri&#355;cu,
-            Arthur Azevedo de Amorim, and
-            Benjamin C. Pierce.<br/>
-    <b><a href="http://arxiv.org/abs/1602.04503">
-          Beyond Good and Evil: Formalizing the Security Guarantees
-                                   of Low-Level Compartmentalization</a></b>.
-    Draft, arXiv:1602.04503, March 2016.
-  <ul style="font-size: small">
-    <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
-  </ul>
-  </li>
 
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
