--- a/students.html
+++ b/students.html
@@ -22,6 +22,12 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><a href="https://www.eleves.ens.fr/home/kmaillar/">Kenji Maillard</a>
+  <ul>
+    <li style="margin-top: 1ex;">Upcoming PhD student at Inria, starting 2016-09: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/dianegalloiswong">Diane Gallois-Wong</a>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/luck-diane.pdf">Luck: a Language for Effective, Dependable
